[package]
name = "transaction-handler-microservice"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = { version = "0.7.9", features = ["macros"] } # "macros" only added cause we had a bug to do with the order of parameters to the function. Note that State<SharedAccountStore> should come before Json<Transaction>
tokio = {version = "1", features = ["full"]}
serde = {version = "1.0", features = ["derive"]}
serde_json = "1.0"
